Migrate the database to Sql server

--- a/appsettings.json
+++ b/appsettings.json
@@ -12,6 +12,14 @@
   },
   "Umbraco": {
     "CMS": {
+      "ModelsBuilder": {
+        "ModelsMode": "InMemoryAuto",
+        "ModelsNamespace": "Umbraco.Cms.Web.Common.PublishedModels",
+        "FlagOutOfDateModels": true,
+        "ModelsDirectory": "~/umbraco/models",
+        "AcceptUnsafeModelsDirectory": true,
+        "DebugLevel": 0
+      },
       "Global": {
         "Id": "bcf44a32-01e4-4535-a558-2f668d101841",
         "SanitizeTinyMce": true
@@ -42,7 +50,7 @@
     }
   },
   "ConnectionStrings": {
-    "umbracoDbDSN": "Data Source=|DataDirectory|/First_CMS.sqlite.db;Cache=Shared;Foreign Keys=True;Pooling=True",
-    "umbracoDbDSN_ProviderName": "Microsoft.Data.SQLite"
+    "umbracoDbDSN": "Data Source=(localdb)\\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\\First_CMS.mdf;Integrated Security=True",
+    "umbracoDbDSN_ProviderName": "Microsoft.Data.SqlClient"
   }
 }
