--- a/CMSTest.csproj
+++ b/CMSTest.csproj
@@ -35,6 +35,40 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\cs\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\de\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\es\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\fr\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\it\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\ja\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\ko\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\pl\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\pt-BR\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\refs\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\runtimes\alpine-x64\native\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\runtimes\linux-arm64\native\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\runtimes\linux-armel\native\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\runtimes\linux-arm\native\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\runtimes\linux-mips64\native\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\runtimes\linux-musl-x64\native\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\runtimes\linux-s390x\native\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\runtimes\linux-x64\native\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\runtimes\linux-x86\native\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\runtimes\osx-arm64\native\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\runtimes\osx-x64\native\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\runtimes\unix\lib\net6.0\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\runtimes\unix\lib\netcoreapp3.1\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\runtimes\win-arm64\native\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\runtimes\win-arm\native\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\runtimes\win-x64\native\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\runtimes\win-x86\native\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\runtimes\win\lib\net6.0\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\runtimes\win\lib\netcoreapp3.1\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\runtimes\win\lib\netstandard2.0\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\ru\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\tr\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\zh-Hans\" />
+    <Folder Include="Backup database\Backup bin\bin\Debug\net6.0\zh-Hant\" />
     <Folder Include="umbraco\Data\TEMP\FileUploads\" />
     <Folder Include="umbraco\Data\TEMP\Install\" />
     <Folder Include="wwwroot\media\" />
